# telnet_server_000

basic_exec/: CMakeLists.txt  main.c  shape.c  shape.h
